# benchmarksMPI

./: CMakeLists.txt  README.md  benchmarks.c  benchmarks.h  config.c  config.h  exec  hello_mpi.c  main.c  meh.txt  readme.md
Debug/: .~lock.results.ods#  CMakeCache.txt  Makefile  benchmarks  broadcast.ods  cmake_install.cmake  final.ods  meh.txt  pingpong.ods  results.ods  scater.ods  scatter.ods  sendreceive.ods
